test to see if correctly connected to github

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -590,9 +590,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "print('test')"
+   ]
   }
  ],
  "metadata": {
